# coolkey_StartEnrollmentOutputProcessor

./: CMakeLists.txt  README  README.md
src/: CKYStartEnrollmentOutputProcessor.cpp  CKYStartEnrollmentOutputProcessor.h  CMakeLists.txt  CoolkeyRSAKeyBlob.cpp  CoolkeyRSAKeyBlob.h  CoolkeyRSAKeyGenResult.cpp  CoolkeyRSAKeyGenResult.h  Endianness.cpp  Endianness.h
